--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Filmoteka</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello</h1>
+  </body>
 </html>
