проверка создания папок

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Filmoteka</title>
   </head>
-  <body>
-    <h1>Hello</h1>
-  </body>
+  <body></body>
 </html>
