footer сделаны разметка и стили

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Filmoteka</title>
   </head>
-  <body></body>
+  <body>
+    <footer class="footer">
+      <div class="conteiner footer-box">
+        <p class="footer-copyright">&copy; 2020 | All Rights Reserved |</p>
+        <div class="footer-developed">
+          <p class="footer-developed-text">Developed with</p>
+          <svg class="footer-developed-icon">
+            <use href="./image/symbol-defs.svg#icon-heart-footer"></use>
+          </svg>
+          <span
+            >by
+            <a class="footer-developed-link" href="#">GoIT Students</a></span
+          >
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
