--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="header-wrapper">
         <nav class="header-nav">
           <div class="header-nav-logo">
-            <a href=""><img class="header-nav-logo-icon" src="./images/Header/film.svg" alt=""></a>
+            <a href=""><img class="header-nav-logo-icon" src="./images/header/film.svg" alt=""></a>
             <a href=""><h1 class="header-nav-logo-title">Filmoteka</h1></a>
           </div>
           <ul class="header-nav-list">
