--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
     <title>Filmoteka</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <section class="section-main">
+        <ul class="photo-gallery-list">
+          
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
