--- a/src/library.html
+++ b/src/library.html
@@ -12,12 +12,12 @@
       <div class="header-wrapper">
         <nav class="header-nav">
           <div class="header-nav-logo">
-            <a href=""><img class="header-nav-logo-icon" src="./images/header/film.svg" alt=""></a>
-            <a href=""><h1 class="header-nav-logo-title">Filmoteka</h1></a>
+            <a href="./index.html"><img class="header-nav-logo-icon" src="./images/header/film.svg" alt=""></a>
+            <a href="./index.html"><h1 class="header-nav-logo-title">Filmoteka</h1></a>
           </div>
           <ul class="header-nav-list">
             <li class="header-nav-list-item">home</li>
-            <li class="header-nav-list-item"><a href="./library.html">my library</a></li>
+            <li class="header-nav-list-item">my library</li>
           </ul>
         </nav>
         <div class="search">
