--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
             <use href="./image/symbol-defs.svg#icon-heart-footer"></use>
           </svg>
           <span
-            >by
-            <a class="footer-developed-link" href="#">GoIT Students</a></span
+            >by<a class="footer-developed-link" href="#">GoIT Students</a></span
           >
         </div>
       </div>
