first update attemp

--- a/src/index.html
+++ b/src/index.html
@@ -36,18 +36,18 @@
         </div>
       </div>
     </header>
-    <div class="container">
-      <section class="section-main">
+    <section class="section-main">
+      <div class="container">
         <ul class="photo-gallery-list"></ul>
-      </section>
-    </div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="conteiner footer-box">
         <p class="footer-copyright">&copy; 2020 | All Rights Reserved |</p>
         <div class="footer-developed">
           <p class="footer-developed-text">Developed with</p>
           <svg class="footer-developed-icon">
-            <use href="./image/symbol-defs.svg#icon-heart-footer"></use>
+            <use href="./images/symbol-defs.svg#icon-heart-footer"></use>
           </svg>
           <span
             >by<a class="footer-developed-link" href="#">GoIT Students</a></span
