--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="conteiner footer-box">
+      <div class="footer-box">
         <p class="footer-copyright">&copy; 2020 | All Rights Reserved |</p>
         <div class="footer-developed">
           <p class="footer-developed-text">Developed with</p>
