--- a/src/index.html
+++ b/src/index.html
@@ -54,18 +54,20 @@
         <button class="btn-page next" data-index="1">&rarr;</button>
       </div>
     </div>
+    <div id="spinner"></div>
     <footer class="footer">
-      <div class="footer-box">
-        <p class="footer-copyright">&copy; 2020 | All Rights Reserved |</p>
-        <div class="footer-developed">
-          <p class="footer-developed-text">Developed with</p>
-          <svg class="footer-developed-icon">
-            <use href="./images/symbol-defs.svg#icon-heart-footer"></use>
-          </svg>
-          <span
-            >by
-            <a class="footer-developed-link" href="#">GoIT Students</a></span
-          >
+      <div class="container">
+        <div class="footer-box">
+          <p class="footer-copyright">&copy; 2020 | All Rights Reserved |</p>
+          <div class="footer-developed">
+            <p class="footer-developed-text">Developed with</p>
+            <svg class="footer-developed-icon">
+              <use href="./images/symbol-defs.svg#icon-heart-footer"></use>
+            </svg>
+            <p>
+              by <span class="footer-developed-students">GoIT Students</span>
+            </p>
+          </div>
         </div>
       </div>
     </footer>
