--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         <button class="btn-page next" data-index="1">&rarr;</button>
       </div>
     </div>
-    <div id="spinner"></div>
+    <div class="is-hidden" id="spinner"></div>
     <footer class="footer">
       <div class="container">
         <div class="footer-box">
