--- a/src/index.html
+++ b/src/index.html
@@ -47,13 +47,13 @@
       <div class="paginator">
         <button class="btn-page previous" data-index="1">&larr;</button>
         <button class="btn-first btn" data-index="1">1</button>
-        <button class="btn-dots dots1">...</button>
+        <span class="btn-dots dots1">...</span>
         <button class="btn-page1 active btn" data-index="1">1</button>
         <button class="btn-page2 btn" data-index="2">2</button>
         <button class="btn-page3 btn" data-index="3">3</button>
         <button class="btn-page4 btn" data-index="4">4</button>
         <button class="btn-page5 btn" data-index="5">5</button>
-        <button class="btn-dots dots2">...</button>
+        <span class="btn-dots dots2">...</span>
         <button class="btn-last btn" data-index="995">995</button>
         <button class="btn-page next" data-index="1">&rarr;</button>
       </div>
