modal window(task-1 &2)

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
         </div>
       </div>
     </header>
+    <section class="modal-window"></section>
     <section class="section-main">
       <div class="container">
         <ul class="photo-gallery-list"></ul>
