--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,19 @@
             /></a>
             <a href=""><h1 class="header-nav-logo-title">Filmoteka</h1></a>
           </div>
+          <div class="languages">
+            <a href="#" language="EN" class="active">EN</a>
+            <a href="#" language="RU">RU</a>
+          </div>
           <ul class="header-nav-list">
             <li class="header-nav-list-item home-button underline">home</li>
             <li class="header-nav-list-item library-button">my library</li>
-
           </ul>
         </nav>
         <div class="search search-show">
-          <input class="search-input" type="text" placeholder="Поиск фильмов" />
+          <form class="search-form">
+          <input class="search-input" type="text" placeholder="Search movie" />
+          </form>
         </div>
         <div class="header-buttons hidden">
           <button class="button watched-button button-anactive">watched</button>
@@ -49,6 +54,7 @@
         <ul class="photo-gallery-list"></ul>
       </div>
     </section>
+
     <div class="pagination container">
       <div class="paginator">
         <button class="btn-page previous" data-index="1">&larr;</button>
@@ -74,7 +80,7 @@
             <svg class="footer-developed-icon">
               <use href="./images/symbol-defs.svg#icon-heart-footer"></use>
             </svg>
-            <p>
+            <p class="by">
               by <span class="footer-developed-students">GoIT Students</span>
             </p>
           </div>
