--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
     <div class="pagination container">
       <div class="paginator">
-        <button class="btn-page previous" data-index="1">&larr;</button>
+        <button class="btn-page prev" data-index="1">&larr;</button>
         <button class="btn-first btn" data-index="1">1</button>
         <button class="btn-dots dots1" data-index="1">...</button>
         <button class="btn-page1 active btn" data-index="1">1</button>
