--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,8 @@
               <use href="./images/symbol-defs.svg#icon-heart-footer"></use>
             </svg>
             <p class="by">
-              by <span class="footer-developed-students">GoIT Students</span>
+             <span class="by-text">by</span>
+             <span class="footer-developed-students">GoIT Students</span>
             </p>
           </div>
         </div>
