удалила класс unactive в html

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
           </form>
         </div>
         <div class="header-buttons hidden">
-          <button class="button watched-button button-anactive">watched</button>
-          <button class="button queue-button button-anactive">queue</button>
+          <button class="button watched-button">watched</button>
+          <button class="button queue-button">queue</button>
         </div>
       </div>
     </header>
