added a - text-decoration

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
             <a href=""><h1 class="header-nav-logo-title">Filmoteka</h1></a>
           </div>
           <div class="languages">
-            <a href="#" language="EN" class="active">EN</a>
-            <a href="#" language="RU">RU</a>
+            <a href="#" class="lang-en  underline" language="EN" >EN</a>
+            <a href="#" class="lang-ru" language="RU">RU</a>
           </div>
           <ul class="header-nav-list">
             <li class="header-nav-list-item home-button underline">home</li>
             <li class="header-nav-list-item library-button">my library</li>
-          </ul>
+           </ul>
         </nav>
         <div class="search search-show">
           <form class="search-form">
