--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
                 alt=""
             /></a>
             <a href=""><h1 class="header-nav-logo-title">Filmoteka</h1></a>
-          </div>
-          <div class="languages">
-            <a href="#" class="lang-en  underline" language="EN" >EN</a>
-            <a href="#" class="lang-ru" language="RU">RU</a>
+            <div class="languages">
+              <a href="#" class="lang-en circle-color" language="EN" ></a>
+              <a href="#" class="lang-ru" language="RU"></a>
+            </div>
           </div>
           <ul class="header-nav-list">
             <li class="header-nav-list-item home-button underline">home</li>
