--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,21 @@
             <a href=""><h1 class="header-nav-logo-title">Filmoteka</h1></a>
           </div>
           <div class="languages">
-            <a href="#" class="lang-en  underline" language="EN" >EN</a>
+            <a href="#" class="lang-en underline" language="EN">EN</a>
             <a href="#" class="lang-ru" language="RU">RU</a>
           </div>
           <ul class="header-nav-list">
             <li class="header-nav-list-item home-button underline">home</li>
             <li class="header-nav-list-item library-button">my library</li>
-           </ul>
+          </ul>
         </nav>
         <div class="search search-show">
           <form class="search-form">
-          <input class="search-input" type="text" placeholder="Search movie" />
+            <input
+              class="search-input"
+              type="text"
+              placeholder="Search movie"
+            />
           </form>
         </div>
         <div class="header-buttons hidden">
@@ -60,36 +64,22 @@
       </div>
     </section>
 
-    <div class="pagination container">
-      <div class="paginator">
-        <button class="btn-page prev" data-index="1">&larr;</button>
-        <button class="btn-first btn" data-index="1">1</button>
-        <button class="btn-dots dots1" data-index="1">...</button>
-        <button class="btn-page1 active btn" data-index="1">1</button>
-        <button class="btn-page2 btn" data-index="2">2</button>
-        <button class="btn-page3 btn" data-index="3">3</button>
-        <button class="btn-page4 btn" data-index="4">4</button>
-        <button class="btn-page5 btn" data-index="5">5</button>
-        <button class="btn-dots dots2" data-index="1">...</button>
-        <button class="btn-last btn" data-index="1000">1000</button>
-        <button class="btn-page next" data-index="1">&rarr;</button>
-      </div>
-    </div>
+    <div class="pagination container"></div>
 
     <div id="spinner"></div>
     <div class="trailer-box"></div>
     <footer class="footer">
       <div class="container">
         <div class="footer-box">
-          <p class="footer-copyright">&copy; 2020 | All Rights Reserved |</p>
+          <p class="footer-copyright">&copy; 2021 | All Rights Reserved |</p>
           <div class="footer-developed">
             <p class="footer-developed-text">Developed with</p>
             <svg class="footer-developed-icon">
               <use href="./images/symbol-defs.svg#icon-heart-footer"></use>
             </svg>
             <p class="by">
-             <span class="by-text">by</span>
-             <span class="footer-developed-students">GoIT Students</span>
+              <span class="by-text">by</span>
+              <span class="footer-developed-students">GoIT Students</span>
             </p>
           </div>
         </div>
