--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         <div class="search search-show">
           <form class="search-form">
           <input class="search-input" type="text" placeholder="Search movie" />
-           <!-- <button type="submit" class="sumbit-button"><img src="./images/header/search.svg" width="12px" height="12px"></button> -->
+        <button type="submit" class="svg-button"></button>
           </form>
         </div>
         <div class="header-buttons hidden">
