--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,11 @@
 
     <div id="spinner"></div>
     <div class="trailer-box"></div>
+    <div class="to-up">
+      <svg class="up-to-svg">
+        <use href="./images/symbol-defs.svg#icon-up-arrow"></use>
+      </svg>
+    </div>
     <footer class="footer">
       <div class="container">
         <div class="footer-box">
