--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,61 @@
         </div>
       </div>
     </header>
-
+    <section class="team hidden">
+      <div class="team-overlay">
+        <div class="team-modal">
+          <button type="button" class="close">X</button>
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="photo bl">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Bogdan Lytvyn</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo db">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Dmitriy Bazhenov</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo dv">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Daria Viter</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo ih">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Ivan Khailo</p>
+              <p class="role">Team-lead</p>
+            </li>
+            <li class="photo mp">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Mila Popescu</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo my">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Michael Yefimovich</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo rs">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Roman Skliarenko</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo tz">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Tetiana Ziatikova</p>
+              <p class="role">Developer</p>
+            </li>
+            <li class="photo vk">
+              <div class="teammate-photo-wraper"></div>
+              <p class="name">Vitaliy Kornienko</p>
+              <p class="role">Scrum master</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <section class="modal is-hidden">
       <div class="modal-overlay"></div>
       <div class="modal-content"></div>
